# protenij

./: CLAUDE.md  README.md  bench_folding_grad.py  bench_load.py  pyproject.toml  test_load.py  test_predict.py  test_two_chain.py  translate_models.py
protenix/: backend.py  inference.py  protenij.py
protenix/configs/: configs_base.py  configs_data.py  configs_model_type.py
protenix/data/: ccd.py  compute_esm.py  constraint_featurizer.py  data_pipeline.py  esm_featurizer.py  featurizer.py  infer_data_pipeline.py  json_to_feature.py  msa_featurizer.py  parser.py  utils.py
protenix/data/template/: __init__.py  template_featurizer.py
protenix/model/: generator.py  loss.py  protenix.py  utils.py
protenix/model/modules/: confidence.py  diffusion.py  pairformer.py  primitives.py  transformer.py
protenix/model/triangular/: __init__.py  layers.py  triangular.py
protenix/openfold_local/data/: msa_pairing.py
protenix/openfold_local/model/: triangular_multiplicative_update.py
protenix/runner/: batch_inference.py  inference.py  train.py
protenix/utils/: cropping.py  distributed.py  torch_utils.py
protenix/web_service/: dependency_url.py
