[project]
name = "protenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "biopython>=1.83",
    "biotite==1.0.1",
    "einops>=0.8.0",
    "equinox>=0.13.0",
    "gemmi>=0.6.5",
    "jax>=0.6.2",
    "ml-collections>=1.1.0",
    "modelcif>=0.7",
    "numpy>=2.1.0",
    "optree>=0.16.0",
    "pandas>=2.3.1",
    "pdbeccdutils>=0.8.5",
    "protobuf==3.20.2",
    "pyyaml>=6.0.2",
    "rdkit>=2025.3.3",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
torch = ["torch[cpu]>=2.3.1"]

[tool.uv]
package = true
override-dependencies = ["nvidia-cudnn-cu12>=9.8"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchaudio = [
  { index = "pytorch-cpu" },
]
